Fixed spacing on homepage

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -79,3 +79,7 @@ input {
     color: $state-danger-text;
   }
 }
+
+.col-xs-6 {
+  box-shadow: 0 0 2px grey;
+}
